# unify

./: README.md  unify.cabal
src/Logic/: Unify.hs
src/Logic/Unify/: Internal.hs
tests/: Tests.hs
tests/Test/Unify/: Subsumption.hs  Types.hs  Unification.hs  Vars.hs
