cabal-version:      2.4
name:               unify
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Logic.Unify
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
                    , containers
                    , lens
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite unify-tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.13.0.0 && <5
                     , unify
                     , generic-lens
                     , lens
                     , tasty
                     , tasty-hunit
                     , transformers
                     , uniplate
  default-language:    Haskell2010
  ghc-options:         -Wall
